[tool.poetry]
name = "vcell_opt"
version = "0.1.0"
description = ""
authors = ["Jim Schaff <schaff.jim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-copasi = "^4.38.265"
grpcio = "^1.51.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
